force-app/main/default/objects/FootballPlayer__c/FootballPlayer__c.object-meta.xml
<CustomObject>
    <label>Football Player</label>
    <nameField>
        <label>Player Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Football Players</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>