force-app/main/default/objects/FootballPlayer__c/fields/FantaTeam__c.field-meta.xml
<CustomField>
    <fullName>FantaTeam__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fanta Team</label>
    <referenceTo>FantaTeam__c</referenceTo>
    <relationshipLabel>Fanta Players</relationshipLabel>
    <relationshipName>FantaPlayers</relationshipName>
    <type>Lookup</type>
</CustomField>