force-app/main/default/objects/FootballPlayer__c/fields/FootballTeam__c.field-meta.xml
<CustomField>
    <fullName>FootballTeam__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Football Team</label>
    <referenceTo>FootballTeam__c</referenceTo>
    <relationshipLabel>Football Players</relationshipLabel>
    <relationshipName>FootballPlayers</relationshipName>
    <type>Lookup</type>
</CustomField>