force-app/main/default/objects/FootballPlayer__c/fields/Player_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Player_Identifier__c</fullName>
    <displayFormat>P-{00000000}</displayFormat>
    <externalId>true</externalId>
    <label>Player Identifier</label>
    <type>AutoNumber</type>
</CustomField>